# diesel-derive-enum

./: .gitignore  .travis.yml  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: CI.yaml
src/: .#test.rs  lib.rs
tests/: Cargo.toml  Justfile  docker-compose.yaml  lib.rs  nullable.rs  rename.rs  simple.rs
tests/src/: clone_impl.rs  common.rs  complex_join.rs  issue_18.rs  lib.rs  nullable.rs  pg_array.rs  pg_clone_impl.rs  pg_remote_type.rs  rename.rs  schema.rs  simple.rs  value_style.rs
tests/src/common/: mod.rs
tests_with_diesel_cli/: Cargo.toml  README.md  custom.diesel.toml  docker-compose.yaml  run.sh
tests_with_diesel_cli/migrations/2022-10-30-154319_setup/: down.sql  up.sql
tests_with_diesel_cli/src/: custom_schema.rs  lib.rs  schema.rs  with_custom_schema.rs  with_default_schema.rs
