[package]
name = "diesel-derive-enum"
version = "0.4.2"
description = "Derive diesel boilerplate for using enums in databases"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "http://github.com/adwhit/diesel-derive-enum"
homepage = "http://github.com/adwhit/diesel-derive-enum"
keywords = ["diesel", "postgres", "sqlite", "sql", "derive"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
heck = "0.3.0"

[dev-dependencies]
diesel = {version = "1.1", features = ["postgres", "sqlite", "mysql"] }

[features]
postgres = []
sqlite = []
mysql = []

[lib]
name = "diesel_derive_enum"
proc-macro = true
