[package]
name = "diesel-derive-enum"
version = "1.1.2"
description = "Derive diesel boilerplate for using enums in databases"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "http://github.com/adwhit/diesel-derive-enum"
homepage = "http://github.com/adwhit/diesel-derive-enum"
keywords = ["diesel", "postgres", "sqlite", "mysql", "sql"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
quote = "1"
syn = "1"
heck = "0.4.0"
proc-macro2 = "1"

[features]
postgres = []
sqlite = []
mysql = []

[lib]
name = "diesel_derive_enum"
proc-macro = true
