[package]
name = "tests"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite", "postgres", "mysql"] }
diesel-derive-enum = { path = "./..", features = ["sqlite", "postgres", "mysql"] }

[features]
postgres = []
sqlite = []
mysql = []
