[package]
name = "tests"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "2.0.0-rc.0" }
diesel-derive-enum = { path = "./.." }

[features]
postgres = [ "diesel/postgres", "diesel-derive-enum/postgres"]
sqlite = [ "diesel/sqlite", "diesel-derive-enum/sqlite"]
mysql = [ "diesel/mysql", "diesel-derive-enum/mysql"]
