[package]
name = "tests"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2021"

[dependencies]
diesel = "2.1.0"
diesel-derive-enum = { path = "./.." }

[features]
postgres = [ "diesel/postgres", "diesel-derive-enum/postgres"]
sqlite = [ "diesel/sqlite", "diesel-derive-enum/sqlite"]
mysql = [ "diesel/mysql", "diesel-derive-enum/mysql"]
